<resources>
    <string name="app_name">Lista de Tarefas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Título</string>
    <string name="note_description">Descrição</string>
    <string name="save">Salvar</string>
    <string name="title_field_cannot_be_empty">Campo título não pode ficar vazio</string>
    <string name="description_field_cannot_be_empty">Campo descrição não pode ficar vazio</string>
    <string name="insert_note">Inserir Nota</string>
    <string name="note_date">Data</string>
    <string name="note_hour">Hora</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_note">Editar</string>
    <string name="delete_note">Excluir</string>
    <string name="update_note">Editar Nota</string>
</resources>