<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UpdateNoteFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_update_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/update_note" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/default_margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/default_margin_16" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_note_title"
        style="@style/DefaultTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_title"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar_update_note">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_note_desc"
        style="@style/DefaultTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/note_description"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_update_note_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="start|top"
            android:inputType="textMultiLine|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_note_date"
        style="@style/DefaultTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_8"
        android:hint="@string/note_date"
        app:layout_constraintEnd_toStartOf="@id/til_update_note_hour"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_update_note_desc"
        app:startIconDrawable="@drawable/ic_calendar"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_note_hour"
        style="@style/DefaultTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_8"
        android:hint="@string/note_hour"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/til_update_note_date"
        app:layout_constraintTop_toBottomOf="@id/til_update_note_desc"
        app:startIconDrawable="@drawable/ic_time"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_update_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_update_cancel_note"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_update_note_date">

        <View
            android:id="@+id/iv_color_red"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_8"
            android:layout_marginTop="@dimen/default_margin_16"
            android:layout_marginBottom="@dimen/default_margin_8"
            android:background="@drawable/bg_note_color_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/iv_color_pink"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_pink"
            app:layout_constraintStart_toEndOf="@id/iv_color_red"
            app:layout_constraintTop_toTopOf="@id/iv_color_red" />

        <View
            android:id="@+id/iv_color_deep_purple"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_deep_purple"
            app:layout_constraintStart_toEndOf="@id/iv_color_pink"
            app:layout_constraintTop_toTopOf="@id/iv_color_pink" />

        <View
            android:id="@+id/iv_color_green"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_green"
            app:layout_constraintStart_toEndOf="@id/iv_color_deep_purple"
            app:layout_constraintTop_toTopOf="@id/iv_color_deep_purple" />

        <View
            android:id="@+id/iv_color_yellow"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_yellow"
            app:layout_constraintStart_toEndOf="@id/iv_color_green"
            app:layout_constraintTop_toTopOf="@id/iv_color_green" />

        <View
            android:id="@+id/iv_color_orange"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginStart="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_orange"
            app:layout_constraintStart_toEndOf="@id/iv_color_yellow"
            app:layout_constraintTop_toTopOf="@id/iv_color_yellow" />

        <View
            android:id="@+id/iv_color_white"
            style="@style/DefaultViewNoteColorPicker"
            android:layout_marginTop="@dimen/default_margin_8"
            android:layout_marginBottom="@dimen/default_margin_16"
            android:background="@drawable/bg_note_color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_color_red"
            app:layout_constraintTop_toBottomOf="@id/iv_color_red" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_cancel_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_8"
        android:backgroundTint="@color/purple_200"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@id/btn_update_save_note"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_save_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_16"
        android:backgroundTint="@color/purple_700"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

</androidx.constraintlayout.widget.ConstraintLayout>